refactored three VCs

--- a/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/Base.lproj/Main.storyboard
@@ -16,10 +16,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,10 +97,10 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="bSp-xi-zaD">
             <objects>
-                <viewController id="0tU-of-WUd" sceneMemberID="viewController">
+                <viewController id="0tU-of-WUd" customClass="LeagueVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R6I-XK-zgw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -188,7 +188,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="1Sh-FF-5Rv" secondAttribute="bottom" constant="20" id="2ly-Vs-ool"/>
                             <constraint firstItem="4Kb-wX-1Oy" firstAttribute="top" secondItem="ohq-UY-XVk" secondAttribute="bottom" constant="20" id="70v-Gh-Uyp"/>
                             <constraint firstItem="4Kb-wX-1Oy" firstAttribute="leading" secondItem="2Pl-ou-xnh" secondAttribute="leading" constant="20" id="DUu-PA-rBh"/>
                             <constraint firstItem="2Pl-ou-xnh" firstAttribute="trailing" secondItem="bGi-kS-vVC" secondAttribute="trailing" constant="20" id="ENF-iA-5Nu"/>
@@ -204,7 +203,6 @@
                             <constraint firstItem="ohq-UY-XVk" firstAttribute="top" secondItem="2Pl-ou-xnh" secondAttribute="top" constant="10" id="pMO-ox-TOW"/>
                             <constraint firstItem="bGi-kS-vVC" firstAttribute="top" secondItem="4Kb-wX-1Oy" secondAttribute="bottom" constant="50" id="tQC-29-1Bh"/>
                             <constraint firstItem="4io-fE-jlm" firstAttribute="top" secondItem="R6I-XK-zgw" secondAttribute="topMargin" constant="-35" id="v4j-uq-Nwd"/>
-                            <constraint firstItem="1Sh-FF-5Rv" firstAttribute="leading" secondItem="R6I-XK-zgw" secondAttribute="leadingMargin" id="vqp-NX-Wfx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Pl-ou-xnh"/>
                     </view>
@@ -213,10 +211,10 @@
             </objects>
             <point key="canvasLocation" x="955.66406249999989" y="129.57540263543191"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="1m9-KO-8qk">
             <objects>
-                <viewController id="b7r-35-Ea2" sceneMemberID="viewController">
+                <viewController id="b7r-35-Ea2" customClass="SkillVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rS2-J8-uSw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -232,7 +230,7 @@
                                 </constraints>
                                 <state key="normal" image="backButton"/>
                                 <connections>
-                                    <segue destination="V0G-T5-2an" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSeque:" id="pr7-XC-tPk"/>
+                                    <segue destination="V0G-T5-2an" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSeque:" id="bM6-Fo-1Od"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="ySk-nH-ZvD" userLabel="Top Stack">
